<resources>
    <string name="app_name">QuizApplication 2</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="nickname">Nickname </string>
    <string name="score">Score: </string>
    <string name="total_time">Total Time: </string>
    <string name="next">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="enter_nickname">Enter Nıckname</string>
    <string name="hint_nickname">Your nickname</string>
    <string name="start">Start</string>
    <string name="question">Question</string>
    <string name="times_up">Time\'s Up!</string>
    <string name="categories">Categories</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="category">Category: </string>
    <string name="category_completed">Category Completed!</string>
    <string name="points">Points: </string>

    <string name="auth_failed">Authentication Failed!</string>
    <string name="loading_data_failed">Retrieving data failed!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sıgn In</string>
    <string name="loading">Loading...</string>
    <string name="already_signed_up">You have already signed up!</string>
    <string name="top_10_players">Top 10 Players</string>

    <string-array name="drawer_items">
        <item>High Scores</item>
        <item>Profile</item>
        <item>Categories</item>
        <item>Friends</item>
        <item>Search User</item>
    </string-array>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="user_profile_headline">User Profile</string>
    <string name="user_name">Name:</string>
    <string name="user_surname">Surname:</string>
    <string name="user_nickname">Nickname:</string>
    <string name="user_friends">Friends</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit"><u>edit</u></string>
    <string name="search_user">Search Users by Nıckname</string>
    <string name="add_friend">Add</string>
    <string name="remove_friend">Remove</string>

    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_search">Search</string>
</resources>
