<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:src="@drawable/quiz_icon"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/set_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/surname"
            android:inputType="text" />

        <EditText
            android:id="@+id/set_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/nickname"
            android:inputType="text" />

        <EditText
            android:id="@+id/set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center" />

    </LinearLayout>


</RelativeLayout>