<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment.quizapplication2.QuizFinishActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="40dp"
        android:text="@string/category_completed"
        android:textSize="@dimen/headline_text_size"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/space_between_views">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/nickname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textSize="@dimen/end_info_text_size"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/nickname_label"
                android:paddingLeft="@dimen/space_between_views"
                android:textSize="@dimen/end_info_text_size"
                android:fontFamily="sans-serif-medium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="@dimen/end_info_text_size"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space_between_views"
                android:textSize="@dimen/end_info_text_size"
                android:fontFamily="sans-serif-medium"
                android:layout_toRightOf="@id/category_label" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="@dimen/end_info_text_size"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space_between_views"
                android:textSize="@dimen/end_info_text_size"
                android:fontFamily="sans-serif-medium"
                android:layout_toRightOf="@id/score_label" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
